# aoc2022

./: CMakeLists.txt
1/: 1a.cpp  1b.cpp
10/: 10a.cpp  10b.cpp
11/: 11a.cpp  11b.cpp
12/: 12a.cpp  12b.cpp
13/: 13a.cpp
14/: 14a.cpp  14b.cpp
15/: 15a.cpp  15b.cpp
16/: 16a.cpp  16b.cpp
17/: 17a.cpp  17b.cpp
18/: 18a.cpp  18b.cpp
19/: 19a.cpp
2/: 2a.cpp  2b.cpp
3/: 3a.cpp  3b.cpp
4/: 4a.cpp  4b.cpp
5/: 5a.cpp  5b.cpp
6/: 6a.cpp  6b.cpp
7/: 7a.cpp  7b.cpp
8/: 8a.cpp  8b.cpp
9/: 9a.cpp  9b.cpp
