cmake_minimum_required(VERSION 3.24)
project(aoc2022)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wshadow -Wpedantic -Werror -fsanitize=address -fsanitize=undefined -O3")

add_executable(13a 13/13a.cpp)
add_executable(13b 13/13b.cpp)
add_executable(17b 17/17b.cpp)
add_executable(18b 18/18b.cpp)
add_executable(19a 19/19a.cpp)
add_executable(19b 19/19b.cpp)
#add_executable(20a 20/20a.cpp)
#add_executable(20b 20/20b.cpp)
#add_executable(21a 21/21a.cpp)
#add_executable(21b 21/21b.cpp)
#add_executable(22a 22/22a.cpp)
#add_executable(22b 22/22b.cpp)
#add_executable(23a 23/23a.cpp)
#add_executable(23b 23/23b.cpp)
#add_executable(24a 24/24a.cpp)
#add_executable(24b 24/24b.cpp)
#add_executable(25a 25/25a.cpp)
#add_executable(25b 25/25b.cpp)
